Fix article images squished

--- a/app/styles/common.css
+++ b/app/styles/common.css
@@ -426,6 +426,10 @@ abbr[title] {
 	padding-block: var(--s-2-5);
 }
 
+.article img {
+	height: auto;
+}
+
 .calendar__event__tags {
 	display: flex;
 	max-width: var(--tags-max-width, 18rem);
